--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux-form": "^1.16.12",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^4.0.0",
     "reactstrap": "^7.1.0",
     "redux": "3.7.2",
     "redux-logger": "^3.0.6",
